--- a/style.css
+++ b/style.css
@@ -1,92 +1,100 @@
+
+
 body{
     background-color: rgb(213, 213, 231);
+    background-image: url(assets/images/краска.jpeg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+    margin: 15px;
+    
+}
+@media only screen and (max-width: 767px) {   body {  background-image: url(assets/images/краски2.jpeg);
+    color: black;
+
+} }
+
+
+.main{
+    min-height: calc(100vh - 70px);
 }
 
 .nav a{
-    /* display: flex; */
-    /* flex-wrap: wrap; */
-    /* overflow: hidden; */
+    
     justify-content: space-around;
     width: 700px;
     margin-right: 12.5%;
-    color: black;
+    color: white;
     text-decoration: none;
+    padding: 20px, 0;
+    font-size: 1.5rem;
 }
-.services{
+a:hover{
+    color: #db7f34;
+
+}
+/* .services{
     background-color: grey;
     color: white;
-}
+} */
 
-.content-grow {
+/* .content-grow {
     display: flex;
     flex-direction: column;
     flex: 1 0 auto;
     margin-right: 10%;
     margin-left: 10%;
+} */
+/*cекция главного экрана */
+.main {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-content: space-around;
+    justify-content: space-around;
+
+}
+.titul {
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-content: stretch;
+    align-items: center;
+    color: white;
+    font-size: 1.5em;
 }
 
-footer {
+.titul__button {
+    padding: 1em;
+    font-size: 1em;
+  text-align: center;
+  background: rgba(237, 255, 78, 0.341);
+  color: white;
+
+}
+/* .titul__button:focus{
+    background: rgb(74, 94, 107, 0.541 );
+    border-radius: inherit;
+} */
+.titul__button:hover{
+    box-shadow: 0 0 10px 0 #db7f34 inset, 0 0 10px 4px #db7f34;
+}
+/* конец cекция главного экрана */
+
+.footer {
+    height: 50px;
+    
     display: flex;
     flex: 0 0 auto;
+    align-content: center;
+    justify-content: center;
+    color: white;
 }
-
-.footer-flex {
-    max-width: 100vw;
-    height: auto;
-    margin-top: 2rem;
-    padding: 2rem;
-    background-color: #2C2C2C;
-    color: #FFFFFF;
+.footer__contacts{
     display: flex;
-    justify-content: space-around;
     align-items: center;
-}
-
-.footer-flex p {
-    font-size: 1.167rem;
-}
-
-.footer-flex h3 {
-    font-size: 1.333rem;
-    font-weight: bold;
-    padding-bottom: 2.083rem;
-}
-
-.footer-flex__item2 {
-    align-self: flex-start;
-    padding-top: 4.833rem;
-}
-
-.footer-flex__item2 a {
-    text-decoration: none;
-    color: #FFFFFF;
-}
-
-.footer-flex__item3 {
-    align-self: flex-start;
-    padding-top: 4.833rem;
-    width: 20%;
-}
-
-.footer-flex__item3 span {
-    padding-right: 10px;
-}
-
-.footer-flex__item4 {
-    align-self: flex-start;
-    padding-top: 4.833rem;
-}
-
-.footer-flex__inner-flex img {
-    padding-right: 1.667rem;
-}
-
-.footer__copyright {
-    background-color: #2C2C2C;
-    border-top: 1px solid #C8C8C8;
-    max-width: 100vw;
-    height: 7vh;
-    color: #C8C8C8;
-    text-align: center;
-    padding-top: 12px; 
+    padding-right: 46px;
+    
 }
