--- a/style.css
+++ b/style.css
@@ -7,27 +7,31 @@ body{
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: fixed;
-    margin: 15px;
+    margin: 30px, 50px, 30px, 50px ;
+    box-sizing: border-box;
     
 }
-@media only screen and (max-width: 767px) {   body {  background-image: url(assets/images/краски2.jpeg);
+/* @media only screen and (max-width: 767px) {   body {  background-image: url(assets/images/краски2.jpeg);
     color: black;
 
-} }
+} } */
 
 
 .main{
-    min-height: calc(100vh - 70px);
+    min-height: calc(100vh - 90px);
 }
-
+.nav{
+    display: flex;
+    justify-content: flex-end;
+}
 .nav a{
-    
-    justify-content: space-around;
+    display: flex;
+    justify-content: space-evenly;
     width: 700px;
     margin-right: 12.5%;
     color: white;
     text-decoration: none;
-    padding: 20px, 0;
+    padding: 5px;
     font-size: 1.5rem;
 }
 a:hover{
@@ -48,14 +52,16 @@ a:hover{
 } */
 /*cекция главного экрана */
 .main {
+    
     display: flex;
-    flex-direction: column;
     flex-wrap: wrap;
-    align-content: space-around;
+    align-content: space-between;
     justify-content: space-around;
+    
 
 }
 .titul {
+    
     display: flex;
     justify-content: space-evenly;
     flex-direction: column;
@@ -65,20 +71,23 @@ a:hover{
     color: white;
     font-size: 1.5em;
 }
-
-.titul__button {
-    padding: 1em;
+.titul__button-main{
+    height: 60px;
+    width: 170px;
+    border-radius: 10px;
+    /* padding: 1em; */
     font-size: 1em;
-  text-align: center;
-  background: rgba(237, 255, 78, 0.341);
+    text-align: center;
+    background: rgba(237, 255, 78, 0.341);
   color: white;
-
+  margin-bottom: 30px;
 }
+
 /* .titul__button:focus{
     background: rgb(74, 94, 107, 0.541 );
     border-radius: inherit;
 } */
-.titul__button:hover{
+.titul__button-main:hover{
     box-shadow: 0 0 10px 0 #db7f34 inset, 0 0 10px 4px #db7f34;
 }
 /* конец cекция главного экрана */
