создала навигацию и фон

--- a/barcode/src/App.css
+++ b/barcode/src/App.css
@@ -2,37 +2,41 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+
+
+
+body{
+  background-color: rgb(213, 213, 231);
+  background-image: url(./images/краска.jpeg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
+  margin: 30px, 50px, 30px, 50px ;
+  box-sizing: border-box;
+  
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+
+
+li {
+  list-style-type: none;
+  
+  /* Убираем маркеры */
+}
+.nav a{
   display: flex;
-  flex-direction: column;
+  justify-content: space-around; 
+  text-decoration: none;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+        flex-direction:row;
+        color: white;
+  
+}
+a:hover{
+  color: #db7f34;
+
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
