--- a/barcode/src/App.css
+++ b/barcode/src/App.css
@@ -1,6 +1,9 @@
 /* .App {
   text-align: center;
 } */
+* {
+  font-family: Arial, Helvetica, sans-serif;
+}
 
 .App-header{
   display: flex;
@@ -52,6 +55,10 @@ a:hover{
 }
 .footer{
   color: white;
+  
+}
+.footer p {
+  margin-left: 25px;
 }
 .main {
   display: inline-block;
@@ -97,11 +104,18 @@ h3 span {
 .mapBox{
   color: white;
   margin-top: 15px;
+  margin-left: 25px;
+ 
 }
 .contacts{
   color: white;
+  padding: 25px;
+  margin: 25px;
 }
 a {
   color: orange;
+}
+.hr {
+  background-color: rgba(red, green, blue, alpha);
 }
 
