--- a/barcode/src/App.css
+++ b/barcode/src/App.css
@@ -52,7 +52,7 @@ a:hover{
 
 }
 .nav a img{
-  width: 30px;
+  width: 25px;
   height: auto;
 }
 .footer{
@@ -65,7 +65,7 @@ a:hover{
 .footer-style{
    display: flex;
   justify-content: space-between;
-  margin: 0,25px, 0, 25px;
+  margin: 0,25px, 15px, 25px;
   
   
 }
@@ -74,6 +74,7 @@ a:hover{
   justify-content: flex-start;
   flex-direction: column;  */
   margin-left: 25px;
+  margin-bottom: 15px;
 }
 
 .footer-contacts{
@@ -82,13 +83,13 @@ a:hover{
   justify-content: flex-end; */
   margin-right: 15px;
 } 
-.main {
+.ink {
   display: inline-block;
   white-space: normal;
   vertical-align: middle;
   text-align: left;
   color: black;
-  margin: 30px;
+  
   background-color: orange;
   margin: 25px;
   padding: 25px;
@@ -99,37 +100,55 @@ a:hover{
   /* translate: (30px, 10px) rotate(5deg); */
 
 }
-.img-main {
-  display: block;
-  border: none;
-  position: relative;
-  width: 30%;
+ .img-ink {
+  /* display: flex; */
+  /* border: none; */
+   /* position: static;  */
+  width: 40%;
   height: 30%;
-  transform:  translate (30px, 10px) ;
-  transform: rotate(10deg);
+ 
 
-}
+}  
 .service{
-  color: black;
-  background-color: orange;
-  padding: 25px;
-}
-.guarantees{
+
+  display: inline-block;
+  white-space: normal;
+  vertical-align: middle;
+  text-align: left;
+
   color: black;
   background-color: orange;
   padding: 25px;
   margin: 25px;
 }
+.guarantees{
+
+  display: inline-block;
+  white-space: normal;
+  vertical-align: middle;
+  text-align: left;
+
+  color: black;
+  background-color: orange;
+  padding: 25px;
+  margin: 25px;
+  
+}
 h3 span {
   color: red;
 }
 .mapBox{
+  display: flex;
+
   color: white;
   margin-top: 15px;
   margin-left: 25px;
  
 }
 .contacts{
+
+  
+
   color: white;
   padding: 25px;
   margin: 25px;
@@ -138,13 +157,19 @@ a {
   color: white;
 }
 .hr {
-  background-color: rgba(red, green, blue, alpha);
+  width: 100%;
+  margin: 1em auto;
+  border: none;
+  background: yellow;
+  height: 1px;
+
 }
 .delivery{
   color: black;
   background-color: orange;
   padding: 25px;
   margin: 25px;
+  
 
 }
 .nav-delivery li{
@@ -165,7 +190,115 @@ a {
   color: #db7f34;
 }
 .contacts-title{
+  display: inline-block;
+  white-space: normal;
+  vertical-align: middle;
+  text-align: left;
+
   color: white;
   margin-left: 25px;
+}
+#menu__toggle {
+  opacity: 0;
+}
+
+
+@media (min-width: 260px) and (max-width: 844px){
+ 
+
+  #menu__toggle {
+    opacity: 0;
+  }
+  .menu__btn {
+    
+    display: flex; /* используем flex для центрирования содержимого */
+    
+    align-items: center;  /* центрируем содержимое кнопки */
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    width: 26px;
+    height: 26px;
+    cursor: pointer;
+    z-index: 1;
+  }
+  .menu__btn > span,
+  .menu__btn > span::before,
+  .menu__btn > span::after {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: #616161;
+  }
+  .menu__btn > span::before {
+    content: '';
+    top: -8px;
+  }
+  .menu__btn > span::after {
+    content: '';
+    top: 8px;
+  }
+  /* контейнер меню */
+  .menu__box {
+    display: block;
+    position: fixed;
+    visibility: hidden;
+    top: 0;
+    left: -100%;
+    width: 300px;
+    height: 100%;
+    margin: 0;
+    padding: 80px 0;
+    list-style: none;
+    text-align: center;
+    background-color: orange;
+    color: black;
+    box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
+  }
+  /* элементы меню */
+  .menu__item {
+    display: block;
+    padding: 12px 24px;
+    
+  
+    font-size: 20px;
+    font-weight: 600;
+    text-decoration: none;
+  }
+  .nav a{
+    color: black;
+  }
+  /* .menu__item:hover {
+    background-color:#616161;
+  } */
+  #menu__toggle:checked ~ .menu__btn > span {
+    transform: rotate(45deg);
+  }
+  #menu__toggle:checked ~ .menu__btn > span::before {
+    top: 0;
+    transform: rotate(0);
+  }
+  #menu__toggle:checked ~ .menu__btn > span::after {
+    top: 0;
+    transform: rotate(90deg);
+  }
+  #menu__toggle:checked ~ .menu__box {
+    visibility: visible;
+    left: 0;
+  }
+  .footer-style ,
+  .footer-address,
+  .footer-contacts{
+    display: flex;
+    flex-direction: column;
+    
+    align-items: center;
+    
+  }
+  .hamburger-menu{
+    margin-bottom: 15px;
+  }
+  
 }
 
