загрузила новый логотип, работа над компонентом service

--- a/barcode/src/App.css
+++ b/barcode/src/App.css
@@ -52,7 +52,7 @@ a:hover{
 
 }
 .nav a img{
-  width: 25px;
+  width: 60px;
   height: auto;
 }
 .footer{
@@ -300,5 +300,8 @@ a {
     margin-bottom: 15px;
   }
   
+}
+.home{
+  color:aliceblue;
 }
 
