--- a/barcode/src/App.css
+++ b/barcode/src/App.css
@@ -2,6 +2,10 @@
 * {
   font-family: Arial, Helvetica, sans-serif;
 }
+html {
+  height: 100%;
+}
+
 
 .App-header{
   display: flex;
@@ -21,7 +25,13 @@
   background-position: center center;
   background-attachment: fixed; 
  
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
+  margin: 0;
+  
+  /* Растягиваем body по высоте html */
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
  }
 
 
@@ -61,6 +71,7 @@ a:hover{
 }
 
 .footer{
+  flex-shrink: 0;
   color: white;
   
 }
@@ -70,7 +81,7 @@ a:hover{
 .footer-style{
   display: flex;
   justify-content: space-between;
-  margin: 0,25px, 15px, 25px;
+  margin: 0, 25px, 15px, 25px;
   
   
 }
@@ -83,9 +94,7 @@ a:hover{
 }
 
 .footer-contacts{
-  /* display: flex;
-  flex-direction: column;
-  justify-content: flex-end; */
+
   margin-right: 15px;
 } 
 .ink {
@@ -102,13 +111,11 @@ a:hover{
 
  
 
-  /* translate: (30px, 10px) rotate(5deg); */
+
 
 }
  .img-ink {
-  /* display: flex; */
-  /* border: none; */
-   /* position: static;  */
+
   width: 40%;
   height: 30%;
  
@@ -310,4 +317,8 @@ a {
 .home{
   color:aliceblue;
 }
+.main{
+  flex-grow: 1;
+}
+
 
