--- a/barcode/src/index.css
+++ b/barcode/src/index.css
@@ -1,5 +1,13 @@
+/* html {
+  height: 100%;
+} */
 body {
   margin: 0;
+
+  /* min-height: 100%;
+display: grid;
+grid-template-rows: auto 1fr auto; */
+
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
