--- a/barcode/src/App.css
+++ b/barcode/src/App.css
@@ -1,6 +1,7 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,700;1,400&display=swap');
 * {
-  font-family: Arial, Helvetica, sans-serif;
+  /* font-family: Arial, Helvetica, sans-serif; */
+  font-family: 'Roboto Condensed', sans-serif;
 }
 
 
@@ -16,7 +17,8 @@
 
 
  body{
-   background-image: url(./images/краска.jpeg);
+  background: linear-gradient(#000000, #FF0000, #FFFF00, #0000FF);
+   /* background-image: url(./images/краска.jpeg); */
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
@@ -55,11 +57,12 @@ a:hover{
 
 }
 .nav a img{
+  /* font-size: 21px; */
   width: 40px;
   height: auto;
 }
 .menu__logo{
-  font-size: larger;
+  font-size: 24px;
   color: aliceblues;
 }
 
@@ -68,9 +71,7 @@ a:hover{
   color: white;
   
 }
-/* .footer p {
-  margin-left: 25px;
-} */
+
 .footer-style{
   display: flex;
   justify-content: space-between;
@@ -79,9 +80,7 @@ a:hover{
   
 }
 .footer-address{
-  /* display: flex;
-  justify-content: flex-start;
-  flex-direction: column;  */
+
   margin-left: 25px;
   margin-bottom: 15px;
 }
@@ -122,7 +121,7 @@ a:hover{
   text-align: left;
 
   color: black;
-  background-color: orange;
+  background-color: rgb(200, 255, 0);
   padding: 25px;
   margin: 25px;
 }
@@ -134,7 +133,7 @@ a:hover{
   text-align: left;
 
   color: black;
-  background-color: orange;
+  background-color: rgb(255, 255, 0);
   padding: 25px;
   margin: 25px;
   
@@ -171,7 +170,7 @@ a {
 }
 .delivery{
   color: black;
-  background-color: orange;
+  background-color: rgb(255, 255, 0);
   padding: 25px;
   margin: 25px;
   
@@ -257,7 +256,7 @@ a {
     padding: 80px 0;
     list-style: none;
     text-align: center;
-    background-color: orange;
+    background-color: rgba(255, 255, 0);
     color: black;
     box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
   }
@@ -275,9 +274,7 @@ a {
   .nav a{
     color: black;
   }
-  /* .menu__item:hover {
-    background-color:#616161;
-  } */
+
   #menu__toggle:checked ~ .menu__btn > span {
     transform: rotate(45deg);
   }
@@ -312,7 +309,12 @@ a {
   color:aliceblue;
 }
 .main{
-  flex-grow: 1;
+  display: inline-grid;
+  justify-items: center;
+  margin-top: 30px;
+  text-align: center;
+  color: white;
+padding: 15px;
 }
 
 
